fix report service